# Project-VI---Web-Page-

./: CMakeLists.txt  DB.cpp  DB.h  README.md  Task.h  Tasks.cpp  User.cpp  User.h  main.cpp
public/: Add_Task_Page.html  Individual_Task_Page.html  SignInPage.html  SignUpPage.html  editAllTaskPage.html  editTaskDescriptionPage.html  editTaskDueDatePage.html  editTaskNamePage.html  home.html  taskspage.html
public/scripts/: SignInScript.js  SignUpScript.js  alert.js  genericDropdown.js
public/styles/: SignInStyles.css  SignUpStyles.css  add_task_styles.css  home_style.css  style.css  style.css.map  style.scss
